# ros-repo-2

./: .gitignore  README.md  frames_2024-05-28_16.57.46.gv
.github/ISSUE_TEMPLATE/: issue-template.md
arduino_serial/: encoder_test.py
config/: robotInfo.json
db/query/: create_table.sql
db/src/: DatabaseManager.py  DatabaseUtils.py  RobotController.py
gui/: README.md
gui/json/: order_data.json
gui/manager_pkg/: package.xml  setup.py
gui/manager_pkg/src/manager_pkg/: package.xml  setup.cfg  setup.py
gui/manager_pkg/src/manager_pkg/data/: barcode_data.json
gui/manager_pkg/src/manager_pkg/manager_pkg/: barcode_scanner.py  manager_main.py  transactions_subscriber.py
gui/manager_pkg/src/manager_pkg/map/: map.pgm  map.yaml  re_map.pgm
gui/manager_pkg/src/manager_pkg/ui/: manager.ui
gui/src/: ConsumerGui.py  db_connection.py  main.py  nodejs_test.py  ui_main.py  ui_order.py
gui/ui/: ConsumerGui.ui  order.ui
human_detection/: package.xml  setup.cfg  setup.py
human_detection/human_detection/: human_detect.py
human_detection/launch/: human_detect.launch.py
human_detection/params/: model.yaml
install/: local_setup.sh  setup.sh
log/: latest_build
minibot_arucomarker/: setup.py
minibot_arucomarker/config/: config.yaml
minibot_arucomarker/launch/: detect.aruco.launch.py  nav.aruco.launch.py
minibot_arucomarker/minibot_arucomarker/: detect_arcuo3.py  detect_aruco.py  detect_aruco2.py
nodejs/: package-lock.json  package.json  test.js
picamera/ArUco_detect/: check_front.py
server/config/: bridge_config.yaml
src/task_manager/: setup.py
(+163 files in other folders)
