<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>manager_pkg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="dydxkr0410@gmail.com">addinedu</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>opencv-python</depend>
  <depend>task_msgs</depend>
  <depend>data_manager</depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
